add pex examples

--- a/src/Solution/BP/NoOp.cls
+++ b/src/Solution/BP/NoOp.cls
@@ -1,13 +1,13 @@
 /// 
-Class Solution.BP.NoOp Extends Ens.BusinessProcessBPL
+Class Solution.BP.MQTT Extends Ens.BusinessProcessBPL
 {
 
 /// BPL Definition
 XData BPL [ XMLNamespace = "http://www.intersystems.com/bpl" ]
 {
-<process language='objectscript' request='Ens.StringContainer' response='Ens.Response' height='2000' width='2000' >
+<process language='objectscript' request='Solution.RAWDATAC' response='Ens.Response' height='2000' width='2000' >
 <sequence xend='200' yend='350' >
-<trace value='request.StringValue' xpos='200' ypos='250' />
+<trace value='request.seq' xpos='200' ypos='250' />
 </sequence>
 </process>
 }
